Integrate with fronted, fix severity
